<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.uniroma2.gestioneprogettiandroid.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/login_username"
        android:ems="10"
        android:id="@+id/login_username"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/login_password"
        android:ems="10"
        android:id="@+id/login_password"
        android:layout_below="@+id/login_username"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_loginButton"
        android:id="@+id/login_loginButton"
        android:layout_below="@+id/login_profileSpinner"
        android:layout_alignLeft="@+id/login_profileSpinner"
        android:layout_alignStart="@+id/login_profileSpinner"
        android:layout_alignRight="@+id/login_profileSpinner"
        android:layout_alignEnd="@+id/login_profileSpinner" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_profileSpinner"
        android:layout_below="@+id/login_password"
        android:layout_alignLeft="@+id/login_password"
        android:layout_alignStart="@+id/login_password"
        android:layout_alignRight="@+id/login_password"
        android:layout_alignEnd="@+id/login_password" />
</RelativeLayout>
